# otherstorage

./: CMakeLists.txt  README.md  push.sh
Arduino/NFC/: NFC.ino
Arduino/NFC_debug/: NFC_debug.ino
HTML/: login.html  register.html
HTML/Django/codespace/: db.sqlite3  manage.py
HTML/Django/codespace/codespace/: asgi.py  settings.py  urls.py  wsgi.py
HTML/Django/codespace/login/: admin.py  models.py  views.py
HTML/Django/codespace/templates/: login.html
Radar_alliance V1.0/: start.sh
Radar_alliance V1.0/bringup/: allpkg.launch.py
Radar_alliance V1.0/bringup/Datas/: martixs.yaml
Radar_alliance V1.0/radar_remap_cpp/: CMakeLists.txt  package.xml
Radar_alliance V1.0/radar_remap_cpp/launch/: cpp.launch.py
Radar_alliance V1.0/radar_remap_cpp/log/: latest_build
Radar_alliance V1.0/radar_remap_cpp/src/: points_subscriber.cpp
Radar_alliance V1.0/radar_yolov5_py/: package.xml  setup.cfg  setup.py
Radar_alliance V1.0/radar_yolov5_py/launch/: py.launch.py
Radar_alliance V1.0/radar_yolov5_py/log/: latest_build
Radar_alliance V1.0/radar_yolov5_py/radar_yolov5_py/: points_publisher.py
Radar_alliance V1.0/radar_yolov5_py/radar_yolov5_py/models/: yolo.py
Radar_alliance V1.0/radar_yolov5_py/radar_yolov5_py/utils/: torch_utils.py
Radar_alliance_with_lidar/PNP_SOLVE_VERSION/: CMakeLists copy.txt  CMakeLists.txt  pnp_solve.cpp
pywebview/: EzTrans.py  example.html
pywebview/index/: all_style.css  main.html
pywebview/index/subpages/: about.html  greet.html  picture_trans.html
pywebview/scripts/: Gif_Png.py  getFilePath.py
(+2 files in other folders)
